<resources>
    <string name="app_name">Arbitrade</string>

    <!-- ACTION -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget password ?</string>
    <string name="network">Network</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="trade_one">BOT One</string>
    <string name="trade_two">BOT Two</string>
    <string name="proceed">Continue</string>
    <string name="stop">Stop</string>
    <string name="change">Change</string>
    <string name="new_name">New Name</string>
    <string name="new_wallet_dax">New Wallet Dax</string>
    <string name="new_password">New Password</string>
    <string name="trade">Trade</string>
    <string name="withdraw">Withdraw</string>
    <string name="withdraw_all">Withdraw All</string>
    <string name="submit">Submit</string>
    <string name="send">Send</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_ticket">Send Ticket</string>

    <!-- LABEL -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Re-Type Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="wallet">Wallet</string>
    <string name="wallet_dax">Wallet Dax</string>
    <string name="doge">Doge</string>
    <string name="starting_balance">Starting Balance</string>
    <string name="remaining_balance">Remaining Balance</string>
    <string name="user_setting">User Settings</string>
    <string name="already_play">You already play today</string>
    <string name="win">Win</string>
    <string name="lose">Lose</string>
    <string name="pay_in">Pay In</string>
    <string name="result">Result</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="datetime">Date Time</string>
    <string name="trade_warning">To avoid asset loss please do not close this screen mid-trading</string>
    <string name="under_maintenance">Service under maintenance please try again later</string>
    <string name="version_mismatch">Your app is outdated, please update the app before continuing</string>
    <string name="unknown_error">Unknown error occurred, please try again later</string>
    <string name="check_connection">Cannot connect to server, please check your internet connection</string>
    <string name="info_reset_password">* enter the mail you are using</string>
    <string name="info_otp">the code sent to your email</string>
    <string name="slow_down">Opening too fast, please try again later</string>
    <string name="cannot_start_trading">Cannot start trading</string>
    <string name="target_win">Target</string>
    <string name="target_lose">Lose At</string>
    <string name="otp">Confirmation Code</string>
    <string name="min_trading">Balance Minimum</string>
    <string name="max_trading">Balance Maximum</string>
    <string name="deposit">Deposit</string>

    <!-- OTHER -->
    <string name="icon">icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zero">0</string>
    <string name="colon">:</string>
    <string name="logout">Logout</string>
</resources>