<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.activity.LoginActivity"
    android:fillViewport="true">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/icon"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_card"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:text="@string/reset_password"
          android:textAlignment="center"
          android:textAllCaps="true"
          android:textColor="@color/White"
          android:textSize="30sp" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="15dp"
          android:layout_marginTop="10dp"
          android:layout_marginEnd="15dp"
          android:text="@string/info_otp"
          android:textColor="@color/textSecondary"
          android:textSize="12sp" />

      <EditText
          android:id="@+id/editTextOTP"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="15dp"
          android:layout_marginEnd="15dp"
          android:background="@drawable/edit_text_light"
          android:ems="10"
          android:gravity="center"
          android:hint="@string/otp"
          android:inputType="textEmailAddress"
          android:padding="10dp"
          android:textColorHint="@android:color/darker_gray" />

      <EditText
          android:id="@+id/editTextPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="18sp"
          android:layout_marginTop="18sp"
          android:layout_marginEnd="18sp"
          android:background="@drawable/edit_text_light"
          android:ems="10"
          android:hint="@string/new_password"
          android:inputType="textPassword"
          android:padding="10dp"
          android:textAlignment="center"
          android:textColorHint="@android:color/darker_gray" />

      <EditText
          android:id="@+id/editTextConfirmPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="18sp"
          android:layout_marginTop="18sp"
          android:layout_marginEnd="18sp"
          android:background="@drawable/edit_text_light"
          android:ems="10"
          android:hint="@string/confirm_password"
          android:inputType="textPassword"
          android:padding="10dp"
          android:textAlignment="center"
          android:textColorHint="@android:color/darker_gray" />

      <Button
          android:id="@+id/buttonSend"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:background="@drawable/button_warning"
          android:paddingStart="30dp"
          android:paddingEnd="30dp"
          android:text="@string/submit"
          android:textAllCaps="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"/>

  </LinearLayout>

</ScrollView>
