<?xml version="1.0" encoding="utf-8"?>
<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1sp"
    android:background="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/txtAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="2sp"
        android:paddingStart="6sp"
        android:text="@string/pay_in"
        android:textAlignment="center"
        android:textColor="@color/textPrimary" />

    <TextView
        android:id="@+id/txtDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="2sp"
        android:paddingStart="6sp"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="@color/textPrimary" />

    <TextView
        android:id="@+id/txtDateTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="2sp"
        android:paddingStart="6sp"
        android:text="@string/datetime"
        android:textAlignment="center"
        android:textColor="@color/textPrimary" />

</TableRow>