<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/colorPrimary"
      android:gravity="center"
      android:orientation="horizontal"
      android:padding="10dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:contentDescription="@string/icon"
        app:srcCompat="@drawable/ic_arbitrade"
        android:scaleType="fitCenter"/>
  </LinearLayout>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="135dp"
          android:layout_marginBottom="70sp"
          android:background="@color/colorPrimaryLight"
          android:orientation="vertical"
          android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_setting"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textSize="24sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="14sp"
            android:orientation="vertical">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4sp"
                android:text="@string/change"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold"/>
          </LinearLayout>

          <EditText
              android:id="@+id/editTextName"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="12sp"
              android:background="@drawable/edit_text_light"
              android:ems="10"
              android:hint="@string/new_name"
              android:inputType="textPersonName"
              android:padding="10dp"
              android:textAlignment="center" />

          <Button
              android:id="@+id/buttonChangeName"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="end"
              android:layout_marginTop="12sp"
              android:background="@drawable/button_primary"
              android:text="@string/change"
              android:textColor="@color/White"
              android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="14sp"
            android:orientation="vertical">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4sp"
                android:text="@string/change"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold"/>
          </LinearLayout>

          <EditText
              android:id="@+id/editTextPassword"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="12sp"
              android:background="@drawable/edit_text_light"
              android:ems="10"
              android:hint="@string/new_password"
              android:inputType="textPassword"
              android:padding="10dp"
              android:textAlignment="center" />

          <EditText
              android:id="@+id/editTextConfirmPassword"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="12sp"
              android:background="@drawable/edit_text_light"
              android:ems="10"
              android:hint="@string/confirm_password"
              android:inputType="textPassword"
              android:padding="10dp"
              android:textAlignment="center" />

          <Button
              android:id="@+id/buttonChangePassword"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="end"
              android:layout_marginTop="12sp"
              android:background="@drawable/button_primary"
              android:text="@string/change"
              android:textColor="@color/White"
              android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_primary"
            android:text="@string/logout"
            android:textColor="@color/White"
            android:textStyle="bold"/>

      </LinearLayout>

    </LinearLayout>

  </ScrollView>

</FrameLayout>