<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_primary"
            android:orientation="vertical"
            android:padding="10dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/withdraw"
                    android:textColor="@color/White"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="12sp"
                    android:background="@drawable/background_card"
                    android:contentDescription="@string/icon"
                    app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6sp"
                android:background="@drawable/edit_text_light"
                android:orientation="horizontal"
                android:padding="6sp">

                <EditText
                    android:id="@+id/txtWallet"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/wallet"
                    android:inputType="text"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6sp"
                android:background="@drawable/edit_text_light"
                android:orientation="horizontal"
                android:padding="6sp">

                <EditText
                    android:id="@+id/txtWithdrawAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/amount"
                    android:inputType="numberSigned" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/doge"
                    android:textAllCaps="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6sp"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnWithdrawAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6sp"
                    android:background="@drawable/button_warning"
                    android:paddingStart="6sp"
                    android:paddingEnd="12sp"
                    android:text="@string/withdraw_all" />

                <Button
                    android:id="@+id/btnWithdraw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6sp"
                    android:background="@drawable/button_warning"
                    android:paddingStart="12sp"
                    android:paddingEnd="6sp"
                    android:text="@string/withdraw" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
