<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.activity.RegisterActivity">

  <ImageView
      android:id="@+id/imageView5"
      android:layout_width="128dp"
      android:layout_height="128dp"
      android:contentDescription="@string/icon"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_arbitrade"/>

  <ScrollView
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="20dp"
          android:background="@drawable/background_card"
          android:gravity="center"
          android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textSize="24sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginStart="18sp"
            android:layout_marginEnd="18sp"
            android:background="@color/colorPrimary"/>

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18sp"
            android:layout_marginTop="18sp"
            android:layout_marginEnd="18sp"
            android:background="@drawable/edit_text_light"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColorHint="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18sp"
            android:layout_marginTop="18sp"
            android:layout_marginEnd="18sp"
            android:background="@drawable/edit_text_light"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColorHint="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18sp"
            android:layout_marginTop="18sp"
            android:layout_marginEnd="18sp"
            android:background="@drawable/edit_text_light"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColorHint="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18sp"
            android:layout_marginTop="18sp"
            android:layout_marginEnd="18sp"
            android:background="@drawable/edit_text_light"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColorHint="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18sp"
            android:layout_marginTop="18sp"
            android:layout_marginEnd="18sp"
            android:background="@drawable/edit_text_light"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColorHint="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/editTextPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18sp"
            android:layout_marginTop="18sp"
            android:layout_marginEnd="18sp"
            android:background="@drawable/edit_text_light"
            android:ems="10"
            android:hint="@string/pin"
            android:inputType="numberPassword"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/editTextConfirmPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18sp"
            android:layout_marginTop="18sp"
            android:layout_marginEnd="18sp"
            android:background="@drawable/edit_text_light"
            android:ems="10"
            android:hint="@string/confirm_pin"
            android:inputType="numberPassword"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColorHint="@android:color/darker_gray" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18sp"
            android:layout_marginBottom="18sp"
            android:background="@drawable/button_warning"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/register"/>
      </LinearLayout>
    </LinearLayout>
  </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>